--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -121,6 +121,8 @@ table(otu$replicate_ltr, otu$replicate_num, useNA='ifany')
 
 # Taxanomic Tree
 
+Construct phylogenetic tree using [Open Tree of Life](http://opentreeoflife.org) with R package [rotl](https://cran.r-project.org/web/packages/rotl/index.html).
+
 ```{r phylo, fig.height=8, fig.width=8, message=F, warning=F}
 otu = read_csv(otu_csv)
 
@@ -134,27 +136,6 @@ otu_gs = otu %>%
   summarise(
     n = n())
 
-#View(otu_gs)
-# sp.
-# sp. OPC-2014
-# sp. JBLS-2013
-# sp. 9 sensu Dawson et al. (2005)
-# sp. MM-2014
-# sp. 15 HC-2011
-# sp. 9 HC-2011
-# sp. Co432.1.3
-# sp. HE-372.1
-# sp. MBTD-CMFRI-S080
-# sp. ARS-2011
-# sp. ARS-2010
-# sp. AAV-2012
-# sp. Co425.1.2
-# sp. BOLD:AAO1626
-# sp. 26 LG-2014
-# sp. 74
-# (Halichoclona) sp. A GPM-2011
-#  environmental sample
-
 if (!file.exists(otl_csv)){
   otl = tnrs_match_names(otu_gs$genus_species)
   write_csv(otl, otl_csv)
@@ -163,9 +144,11 @@ if (!file.exists(otl_csv)){
 }
 
 ott_notfound = c('5264367', '632176', '621380', '67823', '955367', '588763', '566119', '3634672', '1083518', '2841628')
-#Error: HTTP failure: 400 The following OTT ids were not found: [5264367, 632176, 621380, 67823, 955367, 588763, 566119, 3634672, 1083518, 2841628]
 tr <- tol_induced_subtree(setdiff(otl$ott_id, ott_notfound), label_format = 'name')
-#Dropping singleton nodes with labels: Amphibalanus ott1042709, Creseis ott671266, Abylopsis ott4718809, Polysiphonia ott674045
+#Error: HTTP failure: 400 The following OTT ids were not found: 
+#  [5264367, 632176, 621380, 67823, 955367, 588763, 566119, 3634672, 1083518, 2841628]
+#Dropping singleton nodes with labels: 
+#  Amphibalanus ott1042709, Creseis ott671266, Abylopsis ott4718809, Polysiphonia ott674045
 
 plot(tr, 'radial', font = 1, cex = 0.5)
 
